# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import snowflakeRouter from "./snowflake";
+import dashboardsRouter from "./dashboards";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(snowflakeRouter);
+router.use(dashboardsRouter);
 
 export default router;
